syntax = "proto3";
import "google/protobuf/empty.proto";
package user;
option go_package = "./user";

service User{
  //创建用户
  rpc CreateUser(CreateUserInfo) returns (UserInfoResponse);
  //校验密码
  rpc CheckPassword(CheckPasswordInfo) returns(CheckPasswordResponse);
  //通过id获取用户信息
  rpc GetUserByID(UserIDInfo)returns(UserInfoResponse);
  //通过用户名获取信息
  rpc GetUserByUsername(UserNameInfo)returns(UserInfoResponse);
  //更改用户信息
  rpc UpdateUser(UpdateUserInfo)returns (google.protobuf.Empty);
}

message CreateUserInfo{
  string nickname=1;
  bool gender=2;
  string userName=3;
  string password=4;
}

message UserInfoResponse{
  string nickname=1;
  bool gender=2;
  string userName=3;
  string password=4;
  uint32 id=5;
}

message CheckPasswordInfo{
  string password=1;
  string encodePassword=2;
}

message CheckPasswordResponse{
  bool success=1;
}

message UserIDInfo{
  uint32 id=1;
}

message UpdateUserInfo{
  uint32 id=1;
  string nickname=2;
  bool gender=3;
  string userName=4;
  string password=5;
}

message UserNameInfo{
  string userName=1;
}